Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7021

mysql_install_db.exe does not allow to specify template file for mysqld/mariadbd settings

    XMLWordPrintable

Details

    Description

      When upgrading from MySQL to MariaDB on windows from the Zip file it would be convenient to to create the windows service with an existing configuration file that could be pass by a new --defaults-file option

      Other than that the my.ini will be set to the basedir or on dummy datadir pass to the mysql_install_db.exe command

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              stephane@skysql.com VAROQUI Stephane
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.